--- a/_sass/pages/index.scss
+++ b/_sass/pages/index.scss
@@ -57,7 +57,7 @@
     margin-top: 130px;
 
     .heading {
-        margin-bottom: 3em;
+        margin-bottom: 2em;
     }
 
     #view-more-projects {
